quickstart/examples/pd-disaggregation/destinationRule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: pd-destination-rule
spec:
  host: gaie-pd-epp
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 256000
        maxRequestsPerConnection: 256000
        http2MaxRequests: 256000
        idleTimeout: "900s"
        maxRequestsPerConnection: 256000
      tcp:
        maxConnections: 256000
        maxConnectionDuration: "1800s"
        connectTimeout: "900s"
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
