quickstart/examples/pd-disaggregation/httproute.gke.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-d-pd-disaggregation
  namespace: llm-d-inference-scheduler
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: infra-inference-scheduling-inference-gateway
  rules:
    - backendRefs:
      - group: inference.networking.x-k8s.io
        kind: InferencePool
        name: gaie-inference-scheduling
        port: 8000
        weight: 1
      matches:
      - path:
          type: PathPrefix
          value: /
